2004-12-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (process_snippets): add texstr support.

	* scm/framework-texstr.scm (header): change extension to .textmetrics

	* lily/lily-parser.cc (parse_file): do try_load_text_metrics for
	-f tex.

	* lily/text-metrics.cc: new file.
	(try_load_text_metrics): new function

	* lily/include/text-metrics.hh: new file.

2004-12-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/lily-guile.hh (ly_lily_module_constant): rename
	ly_scheme_function to ly_lily_module_constant.

	* lily/modified-font-metric.cc (text_dimension): try
	lookup_tex_text_dimension() first.

	* lily/tfm.cc: new function ly:load-text-dimensions

2004-12-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-texstr.scm (text): use \lilygetmetrics

	* scm/framework-texstr.scm (header): dump in new format.

	* tex/lilypond-tex-metrics: new file.
	
2004-12-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/pango-font.cc (text_stencil): Quick try at glyph->charcode
	mapping.
	(index_to_charcode): New method.

	* scm/output-ps.scm (glyph-string): 
	* scm/output-gnome.scm (glyph-string): Add FONT parameter.

2004-12-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm (FIXME-glyph-string): New function.  Cannot
	implement fully, need FONT to get to charcode.

	* scm/lily.scm (ly:all-stencil-expressions): Add glyph-string.

	* scm: Cleanups.

	* Documentation/user/changing-defaults.itely: Fix internalsrefs
	{Tunable context properties},
	{All layout objects},
	{Music definitions}.

2004-12-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc: use TeX as default output format.

	* flower/file-path.cc (find): try to open directly as well, so we
	find absolute path files. 

	* lily/pango-select.cc: new file.

	* scm/framework-ps.scm: remove all encoding code. 
	load pfb/pfa for PangoFont too.
	
	* lily/lily-guile.cc (ly_chain_assoc_get): new function.

2004-12-22  Werner Lemberg  <wl@gnu.org>
